...

    <!-- VALIDATORS -->
    <string name="validator_value_number">Only numbers are allowed</string>
    <string name="validator_value_infuture">Event cannot take place in the future</string>
    <string name="validator_value_empty">Please enter a value</string>
    <string name="validator_value_empty_list">At least one category must be selected</string>
    <string name="validator_value_none">Entry contains no events</string>
    <string name="validator_value_unrealistic">Unrealistic value</string>

    <!-- ERRORS -->
    <string name="error_unexpected">Something went wrong</string>
    <string name="error_no_connection">No connection?</string>
    <string name="error_no_connection_desc">Go online to get more information</string>
    <string name="error_no_data">Gaping emptiness?</string>
...
