<?xml version="1.0" encoding="UTF-8" ?>

<resources>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="time_select">Select time</string>
</resources>