...
                        android:contentDescription="@null"
                        android:padding="2dp"
                        app:srcCompat="@drawable/ic_alarm"
                        app:tint="?iconColorPrimary" />

                    <Button
                        android:id="@+id/alarm_button"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start|center_vertical"
                        android:text="@string/alarm_reminder_none"
                        android:textAllCaps="false"
...
